# OpenGL_CMake_CS

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Application.hpp  ComputeShader.hpp  Framebuffer.hpp  Mesh.hpp  Model.hpp  MyGaussianblur.hpp  MyHistogram.hpp  MyModel.hpp  MyPseudocolor.hpp  MySkinsmooth.hpp  MyVectorscope.hpp  MyWaveform.hpp  MyZebra.hpp  Shader.hpp  Texture.hpp  bccolors.hpp  camera.hpp  clip.hpp  colors.hpp  glError.hpp
res/models/spaceship/: Intergalactic_Spaceship-(Wavefront).mtl
shader/: 3dmodel.vert  Basic.frag  Basic.vert  Dilate.frag  Smooth.vert  Waveform.frag  YCbCrSkinMask.frag  Zebra.frag
shader/3dmodel/: 3dmodel.frag
shader/Gaussianblur/: Gaussianblur.frag  Gaussianblur.vert
shader/Pseudocolor/: Pseudocolor.frag
shader/Skinsmoothing/: DownSample.frag  GaussianBlur.frag  Merge.frag  Smooth.frag  Smooth_HigLowFreq.frag  UpSample.frag
shader/Waveform/: Waveform.frag  Waveform.vert  Waveform_RGB.frag  Waveform_RGBsplit.frag
shader/Zebra/: Zebra.frag  Zebra.vert
shader/histogram/: Histogram.frag  computeShaderHistogram.comp
src/: Application.cpp  Application.hpp  MyGaussianblur.cpp  MyHistogram.cpp  MyModel.cpp  MyModel.hpp  MyPseudocolor.cpp  MySkinsmooth.cpp  MyVectorscope.cpp  MyWaveform.cpp  MyZebra.cpp  Shader.cpp  Texture.cpp  asset.hpp.in  bccolors.cpp  glError.cpp  main.cpp  test.py
